// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PostPage Component renders the edit form when the 'Edit' button is clicked 1`] = `
<body>
  <div>
    <main
      class="PostPage"
    >
      <h1>
        Lessons I Learned from Cooking
      </h1>
      <h2>
        By 
        FakeUser2
      </h2>
      <p>
        Last edited on 
        Dec 17 07:37:16 2020
      </p>
      <form
        class="EditPost"
      >
        <textarea>
          Have patience, it can be fun to experiment and explore, having a hard time learning something may only be temporary, bringing an idea of yours to life by creating it from scratch without relying on any instructions can be fun and rewarding, the meals you cook don't have to be fancy or difficult to taste good.
        </textarea>
        <div
          class="EditPost__buttons"
        >
          <button
            type="submit"
          >
            Submit
          </button>
          <button
            type="submit"
          >
            Cancel
          </button>
        </div>
      </form>
      <section
        class="BlogPostCommentsList"
      >
        <h2>
          Comments
        </h2>
        <form
          class="AddComment"
        >
          <textarea
            id="content"
            name="content"
            required=""
          />
          <button
            type="submit"
          >
            Add Comment
          </button>
        </form>
        <ul>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment14
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 05 2021 06:07:08
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment15
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 03 2021 20:21:22
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment13
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 02 2021 13:14:15
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment12
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 01 2021 12:13:14
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User4
            </p>
            <p
              class="Comment__content"
            >
              It's amazing what you can learn from cooking
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 20 2020 10:43:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User7
            </p>
            <p
              class="Comment__content"
            >
              Comment10
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 15:22:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User3
            </p>
            <p
              class="Comment__content"
            >
              I know, right?
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 08:37:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User1
            </p>
            <p
              class="Comment__content"
            >
              These are all great lessons!
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 07:37:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Huh, I never thought about it this way
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 17 2020 20:12:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User8
            </p>
            <p
              class="Comment__content"
            >
              Comment11
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 15 2020 17:18:19
            </p>
          </li>
        </ul>
        <button
          class="page-button prev"
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          class="page-button next"
          type="button"
        >
          Next
        </button>
      </section>
    </main>
  </div>
</body>
`;

exports[`PostPage Component renders the post as expected, where the user IS the post's author 1`] = `
<body>
  <div>
    <main
      class="PostPage"
    >
      <h1>
        Lessons I Learned from Cooking
      </h1>
      <h2>
        By 
        FakeUser2
      </h2>
      <p>
        Last edited on 
        Dec 17 07:37:16 2020
      </p>
      <p
        class="PostPage__content"
      >
        Have patience, it can be fun to experiment and explore, having a hard time learning something may only be temporary, bringing an idea of yours to life by creating it from scratch without relying on any instructions can be fun and rewarding, the meals you cook don't have to be fancy or difficult to taste good.
      </p>
      <button
        type="button"
      >
        Edit
      </button>
      <section
        class="BlogPostCommentsList"
      >
        <h2>
          Comments
        </h2>
        <form
          class="AddComment"
        >
          <textarea
            id="content"
            name="content"
            required=""
          />
          <button
            type="submit"
          >
            Add Comment
          </button>
        </form>
        <ul>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment14
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 05 2021 06:07:08
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment15
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 03 2021 20:21:22
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment13
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 02 2021 13:14:15
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment12
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 01 2021 12:13:14
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User4
            </p>
            <p
              class="Comment__content"
            >
              It's amazing what you can learn from cooking
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 20 2020 10:43:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User7
            </p>
            <p
              class="Comment__content"
            >
              Comment10
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 15:22:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User3
            </p>
            <p
              class="Comment__content"
            >
              I know, right?
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 08:37:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User1
            </p>
            <p
              class="Comment__content"
            >
              These are all great lessons!
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 07:37:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Huh, I never thought about it this way
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 17 2020 20:12:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User8
            </p>
            <p
              class="Comment__content"
            >
              Comment11
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 15 2020 17:18:19
            </p>
          </li>
        </ul>
        <button
          class="page-button prev"
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          class="page-button next"
          type="button"
        >
          Next
        </button>
      </section>
    </main>
  </div>
</body>
`;

exports[`PostPage Component renders the post as expected, where the user is NOT the post's author 1`] = `
<body>
  <div>
    <main
      class="PostPage"
    >
      <h1>
        Lessons I Learned from Cooking
      </h1>
      <h2>
        By 
        FakeUser2
      </h2>
      <p>
        Last edited on 
        Dec 17 07:37:16 2020
      </p>
      <p
        class="PostPage__content"
      >
        Have patience, it can be fun to experiment and explore, having a hard time learning something may only be temporary, bringing an idea of yours to life by creating it from scratch without relying on any instructions can be fun and rewarding, the meals you cook don't have to be fancy or difficult to taste good.
      </p>
      <section
        class="BlogPostCommentsList"
      >
        <h2>
          Comments
        </h2>
        <form
          class="AddComment"
        >
          <textarea
            id="content"
            name="content"
            required=""
          />
          <button
            type="submit"
          >
            Add Comment
          </button>
        </form>
        <ul>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment14
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 05 2021 06:07:08
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment15
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 03 2021 20:21:22
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment13
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 02 2021 13:14:15
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Comment12
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Jan 01 2021 12:13:14
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User4
            </p>
            <p
              class="Comment__content"
            >
              It's amazing what you can learn from cooking
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 20 2020 10:43:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User7
            </p>
            <p
              class="Comment__content"
            >
              Comment10
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 15:22:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User3
            </p>
            <p
              class="Comment__content"
            >
              I know, right?
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 08:37:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User1
            </p>
            <p
              class="Comment__content"
            >
              These are all great lessons!
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 19 2020 07:37:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User5
            </p>
            <p
              class="Comment__content"
            >
              Huh, I never thought about it this way
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 17 2020 20:12:16
            </p>
          </li>
          <li
            class="Comment"
          >
            <p
              class="Comment__creator"
            >
              User8
            </p>
            <p
              class="Comment__content"
            >
              Comment11
            </p>
            <p
              class="Comment__timestamp"
            >
              Last edited on 
              Dec 15 2020 17:18:19
            </p>
          </li>
        </ul>
        <button
          class="page-button prev"
          disabled=""
          type="button"
        >
          Previous
        </button>
        <button
          class="page-button next"
          type="button"
        >
          Next
        </button>
      </section>
    </main>
  </div>
</body>
`;
